# QtLego

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  QtLego.cpp
src/common/: Config.hpp.in
src/controllers/: BluetoothController.cpp  BluetoothController.hpp  BluetoothDiscoveryController.cpp  BluetoothDiscoveryController.hpp
src/forms/: AttachedIoRgbLight.cpp  AttachedIoRgbLight.hpp  AttachedIoRgbLight.ui  DeviceSelection.cpp  DeviceSelection.hpp  DeviceSelection.ui  GeneralInformation.cpp  GeneralInformation.hpp  GeneralInformation.ui  GenericChildDialog.cpp  GenericChildDialog.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/models/: GenericLeMessage.cpp  GenericLeMessage.hpp  GenericLeMessageHubAttachedIo.cpp  GenericLeMessageHubAttachedIo.hpp  GenericLeMessageHubProperties.cpp  GenericLeMessageHubProperties.hpp  HubProperty.cpp  HubProperty.hpp  HubPropertyOperation.cpp  HubPropertyOperation.hpp  IoType.cpp  IoType.hpp  LeMessageHubAttachedIo.cpp  LeMessageHubAttachedIo.hpp  LeMessageHubDetachedIo.cpp  LeMessageHubDetachedIo.hpp  LeMessageHubPropertiesUpdateAdvertisingName.cpp  LeMessageHubPropertiesUpdateAdvertisingName.hpp  LeMessageHubPropertiesUpdateBatteryLevel.cpp  LeMessageHubPropertiesUpdateBatteryLevel.hpp  LeMessageHubPropertiesUpdateButton.cpp  LeMessageHubPropertiesUpdateButton.hpp  LeMessageHubPropertiesUpdateSystemType.cpp  LeMessageHubPropertiesUpdateSystemType.hpp  QBluetoothAddresses.cpp  QBluetoothAddresses.hpp  QBluetoothDeviceInfos.cpp  QBluetoothDeviceInfos.hpp  RgbLightColor.cpp  RgbLightColor.hpp  SystemType.cpp  SystemType.hpp
src/models/lists/: BluetoothDeviceList.cpp  BluetoothDeviceList.hpp  RgbLightColorList.cpp  RgbLightColorList.hpp
src/protocols/: GenericLeMessage.cpp  GenericLeMessage.hpp  GenericLeMessageHubAttachedIo.cpp  GenericLeMessageHubAttachedIo.hpp  GenericLeMessageHubProperties.cpp  GenericLeMessageHubProperties.hpp  HubProperty.cpp  HubProperty.hpp  HubPropertyOperation.cpp  HubPropertyOperation.hpp  IoType.cpp  IoType.hpp  LeMessageHubAttachedIo.cpp  LeMessageHubAttachedIo.hpp  LeMessageHubDetachedIo.cpp  LeMessageHubDetachedIo.hpp  LeMessageHubPropertiesUpdateAdvertisingName.cpp  LeMessageHubPropertiesUpdateAdvertisingName.hpp  LeMessageHubPropertiesUpdateBatteryLevel.cpp  LeMessageHubPropertiesUpdateBatteryLevel.hpp  LeMessageHubPropertiesUpdateButton.cpp  LeMessageHubPropertiesUpdateButton.hpp  LeMessageHubPropertiesUpdateSystemType.cpp  LeMessageHubPropertiesUpdateSystemType.hpp  RgbLightColor.cpp  RgbLightColor.hpp  SystemType.cpp  SystemType.hpp
src/utils/: Converter.cpp  Converter.hpp  EnumMapper.cpp  EnumMapper.hpp
src/widgets/: GeneralInformation.cpp  GeneralInformation.hpp  GeneralInformation.ui
unittest/: CMakeLists.txt  QTest.cpp  gtest_main.cpp
unittest/models/: GenericLeMessageTest.cpp
unittest/protocols/: GenericLeMessageTest.cpp  GenericLeMessageTest.hpp  IoType.cpp
unittest/utils/: ConverterTest.cpp
